--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+            <exclusion>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-logging</artifactId>
+            </exclusion>
+        	</exclusions>	
 		</dependency>
 
 		<dependency>
@@ -29,11 +35,18 @@
 			<artifactId>applicationinsights-spring-boot-starter</artifactId>
 			<version>1.1.2</version>
 		</dependency>
- 		<dependency>
-            <groupId>com.microsoft.azure</groupId>
-            <artifactId>applicationinsights-logging-logback</artifactId>
-            <version>2.3.1</version>
-        </dependency>
+ 	
+	   <dependency>
+      	    <groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-log4j2</artifactId>
+      </dependency>
+	
+	  <dependency>
+        <groupId>com.microsoft.azure</groupId>
+        <artifactId>applicationinsights-logging-log4j2</artifactId>
+        <version>2.3.1</version>
+      </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
