format and readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Specify the instrumentation key of your Application Insights resource.
-azure.application-insights.instrumentation-key=
+azure.application-insights.instrumentation-key=5ce0bfa9-8115-44b1-89db-23a2eb27114f
 # Specify the name of your springboot application. This can be any logical name you would like to give to your app.
 spring.application.name=spring-demo-monitor
 
