--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.5.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microsoft</groupId>
 	<artifactId>demoai</artifactId>
@@ -29,11 +30,11 @@
 			<artifactId>applicationinsights-spring-boot-starter</artifactId>
 			<version>1.1.2</version>
 		</dependency>
- 		<dependency>
-            <groupId>com.microsoft.azure</groupId>
-            <artifactId>applicationinsights-logging-logback</artifactId>
-            <version>2.3.1</version>
-        </dependency>
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>applicationinsights-logging-logback</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -47,58 +48,58 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		<plugin>
-            <groupId>com.microsoft.azure</groupId>
-            <artifactId>azure-webapp-maven-plugin</artifactId>
-            <version>1.6.0</version>
-            <configuration>
-                <authentication>
-                    <serverId>azure-auth</serverId>
-                </authentication>
-                 <!-- Web App information testjndiapp2 -->
-               <resourceGroup>springboot</resourceGroup>
-               <appName>springai</appName>
-               <!-- <region> and <pricingTier> are optional. They will be used to create new Web App if the specified Web App doesn't exist -->
-               <region>centralus</region>
-               <pricingTier>S1</pricingTier>
+			<plugin>
+				<groupId>com.microsoft.azure</groupId>
+				<artifactId>azure-webapp-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<configuration>
+					<authentication>
+						<serverId>azure-auth</serverId>
+					</authentication>
+					<!-- Web App information testjndiapp2 -->
+					<resourceGroup>springboot</resourceGroup>
+					<appName>springai</appName>
+					<!-- <region> and <pricingTier> are optional. They will be used to create new Web App if the specified Web App doesn't exist -->
+					<region>centralus</region>
+					<pricingTier>S1</pricingTier>
 
-               <!-- Java Runtime Stack for Web App on Windows-->
-               <javaVersion>1.8.0_181</javaVersion>
-               <javaWebContainer>tomcat 8.5</javaWebContainer>
-               <stopAppDuringDeployment>true</stopAppDuringDeployment>
+					<!-- Java Runtime Stack for Web App on Windows-->
+					<javaVersion>1.8.0_181</javaVersion>
+					<javaWebContainer>tomcat 8.5</javaWebContainer>
+					<stopAppDuringDeployment>true</stopAppDuringDeployment>
 
-               <appSettings>
-                 <!--<property>
+					<appSettings>
+						<!--<property>
                       <name>JAVA_OPTS</name>
                       <value>-DSQLDB_URL=jdbc:sqlserver://jnditestsrv.database.windows.net:1433;database=jnditestsql;authentication=ActiveDirectoryMSI;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;</value>
                   </property>-->
 
-                    <!-- Add APPLICATION_INSIGHTS_IKEY - Instrumentation key-->
-               </appSettings>
+						<!-- Add APPLICATION_INSIGHTS_IKEY - Instrumentation key-->
+					</appSettings>
 
-                <deploymentType>ftp</deploymentType>
-                <!-- Resources to be deployed to your Web App -->
-                <resources>
-                    <resource>
-                        <!-- Where your artifacts are stored -->
-                        <directory>${project.basedir}/target</directory>
-                        <includes>
-                            <include>*.jar</include>
-                        </includes>
-                    </resource>
-                    <resource>
-                        <!-- Where your artifacts are stored -->
-                        <directory>${project.basedir}</directory>
-                        <!-- Relative path to /site/wwwroot/ -->
-                        <targetPath>.</targetPath>
-                        <includes>
-                            <!--<include>web.config</include>-->
-                            <include>*.config</include>
-                        </includes>
-                    </resource>
-                </resources>
-            </configuration>
-         </plugin>
+					<deploymentType>ftp</deploymentType>
+					<!-- Resources to be deployed to your Web App -->
+					<resources>
+						<resource>
+							<!-- Where your artifacts are stored -->
+							<directory>${project.basedir}/target</directory>
+							<includes>
+								<include>*.jar</include>
+							</includes>
+						</resource>
+						<resource>
+							<!-- Where your artifacts are stored -->
+							<directory>${project.basedir}</directory>
+							<!-- Relative path to /site/wwwroot/ -->
+							<targetPath>.</targetPath>
+							<includes>
+								<!--<include>web.config</include>-->
+								<include>*.config</include>
+							</includes>
+						</resource>
+					</resources>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
