--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
 			<artifactId>applicationinsights-logging-logback</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+
+		<dependency> 
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>azure-spring-boot-metrics-starter</artifactId>
+			<version>2.1.6</version>
+		</dependency>	
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
