--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>applicationinsights-spring-boot-starter</artifactId>
-			<version>1.1.2</version>
+			<version>1.2.0-BETA</version>
 		</dependency>
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>applicationinsights-logging-logback</artifactId>
-			<version>2.3.1</version>
+			<version>2.4.0-BETA</version>
 		</dependency>
 
 		<dependency> 
@@ -41,6 +41,12 @@
 			<artifactId>azure-spring-boot-metrics-starter</artifactId>
 			<version>2.1.6</version>
 		</dependency>	
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.9</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -76,10 +82,10 @@
 					<stopAppDuringDeployment>true</stopAppDuringDeployment>
 
 					<appSettings>
-						<!--<property>
+						<property>
                       		<name>JAVA_OPTS</name>
-                      		<value>-Dazure.application-insights.instrumentation-key=%APPINSIGHTS_INSTRUMENTATIONKEY%</value>
-                  		</property>-->
+                      		<value>-javaagent:D:\home\site\wwwroot\agent\applicationinsights-agent-2.4.0-BETA.jar</value>
+                  		</property>
 					</appSettings>
 
 					<deploymentType>ftp</deploymentType>
@@ -100,6 +106,15 @@
 							<includes>
 								<!--<include>web.config</include>-->
 								<include>*.config</include>
+							</includes>
+						</resource>
+						<resource>
+							<!-- Where your artifacts are stored -->
+							<directory>${project.basedir}/agent</directory>
+							<!-- Relative path to /site/wwwroot/ -->
+							<targetPath>agent</targetPath>
+							<includes>
+								<include>*</include>
 							</includes>
 						</resource>
 					</resources>
