--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY}
 # Specify the name of your springboot application. This can be any logical name you would like to give to your app.
 spring.application.name=spring-demo-monitor
-
+azure.application-insights.quick-pulse.enabled=true
 
 logging.level.ROOT=INFO
 logging.level.com.microsoft.demoai=INFO
