--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,12 @@ azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY}
 spring.application.name=spring-demo-monitor
 azure.application-insights.quick-pulse.enabled=true
 
+# Durations can be expressed in seconds or in ISO 8601 format
+# https://en.wikipedia.org/wiki/ISO_8601#Durations
+azure.application-insights.profiler.enabled=true
+azure.application-insights.profiler.initialDelay=120s
+azure.application-insights.profiler.standbyDuration=PT30M
+azure.application-insights.profiler.traceDuration=30s
+
 logging.level.ROOT=INFO
 logging.level.com.microsoft.demoai=INFO
