--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>javaprofiler-repo</id>
+			<url>https://www.myget.org/F/profiler-maven/maven</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -36,11 +43,11 @@
 			<version>2.4.0-BETA</version>
 		</dependency>
 
-		<dependency> 
+		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-spring-boot-metrics-starter</artifactId>
 			<version>2.1.6</version>
-		</dependency>	
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,6 +65,23 @@
 			<version>4.5.9</version>
 		</dependency>
 
+		<!-- Profiler -->
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>applicationinsights-profiler-spring</artifactId>
+			<version>0.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>applicationinsights-profiler-telemetrymodule</artifactId>
+			<version>0.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.olivergondza</groupId>
+			<artifactId>maven-jdk-tools-wrapper</artifactId>
+			<version>0.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -70,6 +94,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<includeSystemScope>true</includeSystemScope>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.microsoft.azure</groupId>
@@ -93,9 +120,9 @@
 
 					<appSettings>
 						<property>
-                      		<name>JAVA_OPTS</name>
-                      		<value>-javaagent:D:\home\site\wwwroot\agent\applicationinsights-agent-2.4.0-BETA.jar</value>
-                  		</property>
+							<name>JAVA_OPTS</name>
+							<value>-javaagent:D:\home\site\wwwroot\agent\applicationinsights-agent-2.4.0-BETA.jar -agentpath:D:\home\site\wwwroot\agent\javaprofileragent.dll</value>
+						</property>
 					</appSettings>
 
 					<deploymentType>ftp</deploymentType>
