--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,15 @@
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>applicationinsights-spring-boot-starter</artifactId>
-			<version>1.2.0-BETA</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>applicationinsights-logging-logback</artifactId>
-			<version>2.4.0-BETA</version>
+			<version>2.3.1</version>
 		</dependency>
 
+		<!-- Metrics -->
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-spring-boot-metrics-starter</artifactId>
@@ -121,7 +122,7 @@
 					<appSettings>
 						<property>
 							<name>JAVA_OPTS</name>
-							<value>-javaagent:D:\home\site\wwwroot\agent\applicationinsights-agent-2.4.0-BETA.jar -agentpath:D:\home\site\wwwroot\agent\javaprofileragent.dll</value>
+							<value>-javaagent:D:\home\site\wwwroot\agent\applicationinsights-agent-2.3.1.jar -agentpath:D:\home\site\wwwroot\agent\javaprofileragent.dll</value>
 						</property>
 					</appSettings>
 
